src/components/dashboard/dashboard.scss
@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto:medium");
@import "~rfs/scss";

/*
============================================================
************************************************************
                  Variables
************************************************************
============================================================
*/

$small-breakpoint: 600px;
$medium-breakpoint: 768px;
$large-breakpoint: 992px;
$x-large-breakpoint: 1200px;
$medium-dark-gray: #434343;

//Mixins
@mixin standard-box-shadow {
  box-shadow: 1px 1px 5px -4px;
}

@mixin soft-box-shadow {
  box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.25);
}

@mixin standard-border-radius {
  border-radius: 15px;
}

@mixin light-border-radius {
  border-radius: 10px;
}

@mixin standard-box-shadow-hover {
  box-shadow: 2px 2px 5px -4px;
  transition: 0.3s ease;
}

/*
============================================================
************************************************************
                  Standard Design Changes
************************************************************
============================================================
*/

/* Heading stylings for dashboard modules */
.module-name {
  @include font-size(28px);
  font-family: lato;
  font-weight: bold;
  //font-size: 28px;
  line-height: 43px;
  align-items: center;
  text-align: left;
  margin-top: 3%;

  color: #1f1f1f;
}
/* Stylings for cover image in large education cards */
.apply-skills-big-card-cover {
  height: 400px;
  object-fit: cover;
  align-items: top;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.apply-skills-big-card-title {
  font-size: 36px;
  font-family: lato;
  color: black;
  text-align: left;
}

.apply-skills-big-card-time {
  color: #52c41a;
  font-family: roboto;
  font-size: 24px;
  font-style: oblique;
  margin-top: -20px;
  margin-bottom: 10px;
}

.apply-skills-big-card-content {
  font-size: 18px;
  font-family: roboto;
  margin-top: -10px;
}

/* Styling for little cards */
.apply-skills-little-card-cover {
  height: 200px;
  object-fit: cover;
  align-items: top;
}

.apply-skills-little-card-title {
  font-size: 24px;
  font-family: lato;
  color: black;
  text-align: left;
}

.apply-skills-little-card-content {
  font-size: 16px;
  font-family: roboto;
  margin-top: -10px;
}

.apply-skills-little-card-time {
  color: #52c41a;
  font-family: roboto;
  font-size: 18px;
  font-style: oblique;
  margin-top: -10px;
  margin-bottom: 15px;
}

.apply-skills-banner {
  width: 70%;
}

.container {
  background: white;
  border-radius: 10px;
  padding: 3%;
}

html {
  background-color: gray;
}

hr {
  width: 4px;
  color: black;
}

/*
============================================================
                    Company Information Pages
============================================================
*/

.company-info-card {
  @include standard-box-shadow();
  background: white;
  border-radius: 10px;
  flex-direction: column;
  margin-top: 10px;

  min-width: 400px;
  display: flex;
  align-items: center;

  &:hover {
    @include standard-box-shadow-hover();
  }
}

.company-info-banner {
  background-color: white;
  height: 250px;
  width: 100%;
  border-radius: 10px 10px 0px 0px;

  .company-info-banner-img {
    height: 250px;
    width: 100%;
    object-fit: cover;
    border-radius: 10px 10px 0px 0px;
  }
}

.company-info-inner-content {
  display: flex;
  justify-content: center;
  padding-left: 7%;
  padding-right: 7%;
  padding-bottom: 7%;
  width: 85%;
  margin-top: 3%;
}

.company-info-company-name {
  font-family: Lato;
  font-style: normal;
  font-weight: bold;
  text-align: left;

  margin-top: -1vh;
  margin-left: 2vw;
  margin-bottom: -1vh;
}

.company-info-company-location {
  font-family: Roboto;
  font-weight: normal;
  text-align: left;

  margin-left: 2vw;

  color: $medium-dark-gray;
}

.company-info-subsection-header {
  font-family: Lato;
  font-style: normal;
  font-weight: bold;
  width: 100%;
  text-align: center;
}

.company-info-description {
  font-family: Roboto;
  font-style: normal;
  text-align: left;
}

.company-info-read-more-button {
  margin-top: 1%;
  font-family: Roboto;
  background-color: transparent;
  color: #1890ff;

  &:hover {
    cursor: pointer;
  }
}

.company-info-sub-card {
  @include soft-box-shadow();
  @include light-border-radius();
  padding: 7% 12%;
  text-align: left;

  .sub-card-heading {
    font-family: Lato;
    font-style: normal;
    font-weight: bold;
    text-align: center;
    margin-bottom: 7%;
  }
  .sub-card-sub-heading {
    font-family: Roboto;
    font-style: normal;
    font-weight: bold;
    text-align: left;
  }
}

.company-info-listing-card {
  @include soft-box-shadow();
  @include light-border-radius();
  text-align: left;
  position: relative;
  word-wrap: break-word;
  height: 150%;
  padding: 0 5%;
  display: flex;
  flex-direction: column;
  align-content: space-around;

  .company-info-listing-card-icon-box {
    flex-basis: 80%;
    display: flex;
    align-items: flex-end;
    justify-content: center;
  }

  .sub-card-heading {
    font-family: Roboto;
    font-style: normal;
    font-weight: medium;
    text-align: center;
    flex-basis: 70%;
  }

  @media screen and (max-width: $medium-breakpoint) {
    @include font-size(14px);
  }
}
/*
============================================================
************************************************************
                    ANT DESIGN OVERRIDES
************************************************************
============================================================
*/

/*
============================================================
                    Dashboard Navbar Overrides
============================================================
*/
.dashboard-nav.ant-menu-horizontal > .ant-menu-item:hover,
.dashboard-nav.ant-menu-horizontal > .ant-menu-submenu:hover,
.dashboard-nav.ant-menu-horizontal > .ant-menu-item-active,
.dashboard-nav.ant-menu-horizontal > .ant-menu-submenu-active,
.dashboard-nav.ant-menu-horizontal > .ant-menu-item-open,
.dashboard-nav.ant-menu-horizontal > .ant-menu-submenu-open,
.dashboard-nav.ant-menu-horizontal > .ant-menu-item-selected,
.dashboard-nav.ant-menu-horizontal > .ant-menu-submenu-selected {
  color: #1890ff;
  border-bottom: 5px solid #1890ff;
}

.dashboard-nav.ant-menu-item-selected {
  color: #1890ff;
}

.dashboard-nav.ant-menu-item {
  color: #1f1f1f;
}

.dashboard-nav.ant-menu-horizontal {
  line-height: 46px;
  white-space: nowrap;
  border: 0;
  border-bottom: 0px;
  -webkit-box-shadow: none;
  box-shadow: none;
}

/*
============================================================
                    Education Card Overrides
============================================================
*/
.ant-card-cover img {
  border-radius: 15px 15px 0 0;
}

.add-company-button-group {
  @media screen and (max-width: $medium-breakpoint) {
    margin-top: 1%;
    margin-bottom: 1%;
  }
}

.break {
  display: none;

  @media screen and (max-width: $medium-breakpoint) {
    display: inline;
    flex-basis: 100%;
    height: 0;
  }
}

.button-style {
  border-radius: 2px;
  width: 12vw;
  min-width: 150px;
  height: 36px;

  @media screen and (max-width: $medium-breakpoint) {
    @include font-size(14px);
    margin-top: 1%;
    margin-bottom: 1%;
  }
}

.add-button-style {
  border-radius: 2px;
  width: 30%;
  min-width: 100px;
  height: 36px;

  margin-right: 1%;

  white-space: normal;
  word-wrap: break-word;

  @media screen and (max-width: $large-breakpoint) {
    @include font-size(14px);
    display: inline;
    width: 100%;
    margin-top: 1%;
    margin-bottom: 1%;
  }
}

.companyIMG {
  width: 25vw;
  height: 200px;

  @media screen and (max-width: $medium-breakpoint) {
    display: none;
  }
}

.companyLocation {
  width: 200px;
  font-size: 18px;

  margin-right: 5%;
}

/*APPLY SKILLS STYLING*/
@media only screen and (max-width: 810px) {
  /* Stylings for cover image in large education cards */
  .apply-skills-big-card-cover {
    height: 300px;
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
  }

  .apply-skills-big-card-title {
    font-size: 36px;
  }

  .apply-skills-big-card-time {
    font-size: 18px;
    margin-top: -16px;
    margin-bottom: 8px;
  }

  .apply-skills-big-card-content {
    font-size: 14px;
    margin-top: -8px;
  }

  /* Styling for little cards */
  .apply-skills-little-card-cover {
    height: 200px;
  }

  .apply-skills-little-card-title {
    font-size: 18px;
  }

  .apply-skills-little-card-content {
    font-size: 12px;
    margin-top: -8px;
  }

  .apply-skills-little-card-time {
    font-size: 14px;
    margin-top: -8px;
    margin-bottom: 12px;
  }
}

.rounded-borders {
  border-radius: 15px;
}

